--- a/installation.html
+++ b/installation.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.mdgd6cii.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.DG8MqSgz.js"></script>
+    <script type="module" src="/assets/app.CSgsLfU8.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.DUvhmDTP.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.DReZyM1V.js">
     <link rel="modulepreload" href="/assets/chunks/framework.CGwvYp9u.js">
     <link rel="modulepreload" href="/assets/installation.md.BZHTVBXl.lean.js">
     <meta name="darkreader-lock">
