deploy: 79cec5d01e74998bc05419d5aaf28ab1c9c9e573

--- a/faq/index.html
+++ b/faq/index.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.mdgd6cii.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.CSgsLfU8.js"></script>
+    <script type="module" src="/assets/app.DHjtQanU.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.DReZyM1V.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.BjCS5mvI.js">
     <link rel="modulepreload" href="/assets/chunks/framework.CGwvYp9u.js">
     <link rel="modulepreload" href="/assets/faq_index.md.-O1lO3xg.lean.js">
     <meta name="darkreader-lock">
