--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="preload stylesheet" href="/assets/style.mdgd6cii.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.CSgsLfU8.js"></script>
+    <script type="module" src="/assets/app.DHjtQanU.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
     <meta name="darkreader-lock">
     <meta name="theme-color" content="#f64b4b">
